[package]
name = "rust_active_campaign"
version = "0.1.0"
authors = ["Dave Smith <dave@sophoservices.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="^0.10",features=["blocking","json"] }
serde = { version = "^1.0", features = ["derive"] }

[dev-dependencies]
toml = "^0.5"
log = "^0.4"
simplelog = "^0.8"